refactor: use virtual thread for start/stop button handling